feat: Add web interfaces for Kafka and Spark monitoring
- Add Kafka UI (provectuslabs/kafka-ui) on port 8090
  * Browse topics and messages
  * Monitor consumer groups
  * Produce test messages
  * Cluster health monitoring

- Start Spark Master and Worker services
  * Spark Master UI on port 8080
  * Spark Worker UI on port 8081

- Add WEB_INTERFACES.md with complete access guide
  * Port forwarding instructions for Codespaces
  * UI feature guides
  * Troubleshooting tips
  * Quick reference links

All services now have web-based monitoring and management interfaces.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,6 +36,22 @@ services:
     volumes:
       - kafka_data:/var/lib/kafka/data
 
+  kafka-ui:
+    image: provectuslabs/kafka-ui:latest
+    container_name: kafka-ui
+    profiles: [ "core" ]
+    depends_on:
+      - kafka
+      - zookeeper
+    environment:
+      KAFKA_CLUSTERS_0_NAME: local
+      KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: kafka:29092
+      KAFKA_CLUSTERS_0_ZOOKEEPER: zookeeper:2181
+      DYNAMIC_CONFIG_ENABLED: 'true'
+    ports:
+      - "8090:8080"
+    restart: unless-stopped
+
   spark-master:
     image: apache/spark:3.5.0
     container_name: spark-master
